# knr-reader

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  ipc.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  lib.rs  main.rs
src/components/: ComicViewer.tsx  PdfViewer.tsx
