[package]
name = "knr-reader"
version = "0.1.0"
description = "A reader for PDF, CBZ and CBR files"
edition = "2021"

[lib]
name = "knr_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2"] }
unrar = "0.5"
natord = "1.0"
sha2 = "0.10"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
strip = true
